// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`S3Image render correctly if has srcs 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "margin": "0.2%",
      "verticalAlign": "top",
      "width": "32%",
    }
  }
>
  <div
    onClick={[Function]}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      onError={[Function]}
      onLoad={[Function]}
      src="src"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`S3Image render nothing if no src 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "margin": "0.2%",
      "verticalAlign": "top",
      "width": "32%",
    }
  }
>
  <div
    onClick={[Function]}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      onError={[Function]}
      onLoad={[Function]}
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
